// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different date formats eg(short,medium,full,long) should render component as expected (1) 1`] = `
<gux-date-beta date="1657166400000" format="short" locale="en">
  <mock:shadow-root>
    <div>
      7/7/22
    </div>
  </mock:shadow-root>
</gux-date-beta>
`;

exports[`#render different date formats eg(short,medium,full,long) should render component as expected (2) 1`] = `
<gux-date-beta date="1657166400000" format="medium" locale="en">
  <mock:shadow-root>
    <div>
      Jul 7, 2022
    </div>
  </mock:shadow-root>
</gux-date-beta>
`;

exports[`#render different date formats eg(short,medium,full,long) should render component as expected (3) 1`] = `
<gux-date-beta date="1657166400000" format="long" locale="en">
  <mock:shadow-root>
    <div>
      July 7, 2022
    </div>
  </mock:shadow-root>
</gux-date-beta>
`;

exports[`#render different date formats eg(short,medium,full,long) should render component as expected (4) 1`] = `
<gux-date-beta date="1657166400000" format="full" locale="en">
  <mock:shadow-root>
    <div>
      Thursday, July 7, 2022
    </div>
  </mock:shadow-root>
</gux-date-beta>
`;
